support for force option to image delete
